# --------------------------------------------------------------
#  gl
#
#  provides:
#    gl.lua
#    gl/vendor.so
# --------------------------------------------------------------
set(MODULE_NAME gl)
set(target ${MODULE_NAME})

# --------------------------------------------------------------
#  module
# --------------------------------------------------------------
add_custom_target(${MODULE_NAME} true)

# --------------------------------------------------------------
#  vendor
# --------------------------------------------------------------
add_subdirectory(vendor)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lib
  DESTINATION ${LUBYK_LIB}
)

